--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,6 +6,7 @@ Unicode Character “🏆” (U+1F3C6) - &#127942
 <html>
     <head>
         <link rel = "stylesheet" type="text/css" href="leaderboard.css">
+        <link rel="icon" type="image/x-icon" href="fav.ico">
         <title>Current Rankings</title>
     </head>
     <br>
