--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="fav.ico">
 </head>
 
 <h1 ><span id="head-text">Into the Trivia Hole</span></h1>
