--- a/question.html
+++ b/question.html
@@ -99,6 +99,9 @@
 <title>
     WonderLand Trivia
 </title>
+<head>
+    <link rel="icon" type="image/x-icon" href="fav.ico">
+</head>
 
 <body id="bod">
     <div id="score" class="score">
